# raspi-dashboard

./: .gitignore  .gitmodules  README.md
raspi-dashboard-server/: CMakeLists.txt
raspi-dashboard-server/src/: main.cpp
